# es-futures-trading

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml
.planning/: .continue-here.md  HANDOFF.json  INTEGRATION-CHECK.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/decisions/: 0001-data-provider.md  opt-20260517.md  opt-template.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/00-provider-validation-spike/: 00-01-PLAN.md  00-01-SUMMARY.md  00-02-PLAN.md  00-02-SUMMARY.md  00-03-PLAN.md  00-03-SUMMARY.md  00-VERIFICATION.md  RESEARCH.md
.planning/phases/01-foundation-data-in/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  (+8 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
apps/web/: README.md  next.config.ts  package.json  postcss.config.mjs  tailwind.config.ts  vitest.config.ts
config/: risk.yaml  system.yaml
config/strategies/: orb.optspace.yaml  orb.yaml
docs/operations/: backup.md
scripts/: backup.ps1  gen_golden.py  playwright_diagnose.ps1  replay.py  run_backtest.py  run_opt.py  screenshot_dashboard.mjs  seed_bars.py
scripts/hooks/: no_direct_vbt.py  no_naive_tz.py
scripts/spike/: tv_mcp_restart.py  tv_mcp_smoke.py  twelvedata_probe.py  verify_adr.py  verify_artifacts.py
(+137 files in other folders)
