# Workspace root — not a published package. Drives uv workspace + pytest config.
# Authoritative version pins live here per CLAUDE.md "What NOT to Use".
[project]
name = "es-futures-trading"
version = "0.1.0"
requires-python = ">=3.11,<3.13"

[tool.uv.workspace]
members = ["packages/trading-core", "packages/api", "packages/tv-bridge"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov",
    "hypothesis>=6.150,<7.0",
    "respx",
    "freezegun",
    "pre-commit",
    "mypy",
    # FND-02: vectorbt pinned even though Phase 1 does not use it (Phase 3 lands the backtester).
    "vectorbt==1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# importmode=importlib avoids the cross-package test-name collision that occurs
# when sibling tests/ dirs share file basenames (e.g. test_import.py) — see pytest docs.
addopts = "--import-mode=importlib"
testpaths = [
    "packages/trading-core/tests",
    "packages/api/tests",
    "packages/tv-bridge/tests",
]
markers = [
    # Plan 01-05 Task 1: gates the pre-commit hook subprocess tests.
    # Plan 01-05 Task 2: gates the seed_bars CLI subprocess tests.
    "integration: subprocess-driven tests that shell out to pre-commit / a script CLI",
]

[tool.coverage.run]
source = [
    "packages/trading-core/src/trading_core/risk",
    "packages/trading-core/src/trading_core/execution",
    "packages/trading-core/src/trading_core/storage",
]
